# rust_bucket

./: .gitignore  Cargo.toml
asyncawait/: Cargo.toml
asyncawait/src/: main.rs
axumtut/: Cargo.toml  helpers.md
axumtut/src/: main.rs
bucket/: Cargo.toml
bucket/src/: enums.rs  errHandl.rs  guess.rs  lifetimes.rs  main.rs  modul.rs  structs.rs
bucket/testing/src/: lib.rs
closures/src/: main.rs
concur/: Cargo.toml
concur/src/: main.rs
minigrep/: hello.txt
minigrep/src/: lib.rs  main.rs
smrtpointers/: Cargo.toml
smrtpointers/src/: main.rs
src/: collections.rs  enums.rs  errHandl.rs  genric.rs  main.rs  ownership.rs  traits.rs  varmut.rs
