[package]
name = "axumtut"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { version= "1.46.1", features= ["full"] }
axum = "0.8"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_with = "3"
tower-http = { version = "0.5", features = ["fs"] }
[dev-dependencies]
anyhow = "1"
